--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,10 @@
 {
-    "plugins": [
-        ["module-resolver", {
-            "root": ["./src"],
-            "alias": {}
-        }]
-    ],
-    "presets": [
-        ["env", {"loose": true, "modules": "commonjs"}]
-    ]
+  "plugins": [
+      ["module-resolver", {
+          "root": ["./src"],
+          "alias": {}
+      }],
+      "@babel/transform-runtime"
+  ],
+  "presets": ["@babel/preset-env"]
 }
