--- a/tools/demo/project.config.json
+++ b/tools/demo/project.config.json
@@ -12,8 +12,8 @@
 		"nodeModules": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.2.3",
-	"appid": "",
+	"libVersion": "2.10.2",
+	"appid": "wxe5f52902cf4de896",
 	"projectname": "miniprogram-demo",
 	"isGameTourist": false,
 	"condition": {
